--- a/examples/usages/mezzio/composer.json
+++ b/examples/usages/mezzio/composer.json
@@ -59,7 +59,21 @@
         },
         {
             "type": "path",
+            "url": "./../../../src/Adapter/Plates",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
             "url": "./../../../src/Integration/Mezzio/Twig",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
+            "url": "./../../../src/Integration/Mezzio/Plates",
             "options": {
                 "symlink": true
             }
@@ -77,7 +91,8 @@
         "laminas/laminas-servicemanager": "^3.4",
         "mezzio/mezzio-fastroute": "^3.0.3",
         "mezzio/mezzio-twigrenderer": "^2.6",
-        "schranz-templating/mezzio-twig-integration": "@dev"
+        "schranz-templating/mezzio-twig-integration": "@dev",
+        "schranz-templating/mezzio-plates-integration": "@dev"
     },
     "require-dev": {
         "laminas/laminas-development-mode": "^3.3.0",
