--- a/examples/usages/mezzio/composer.json
+++ b/examples/usages/mezzio/composer.json
@@ -66,6 +66,13 @@
         },
         {
             "type": "path",
+            "url": "./../../../src/Adapter/Handlebars",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
             "url": "./../../../src/Integration/Mezzio/Twig",
             "options": {
                 "symlink": true
@@ -74,6 +81,13 @@
         {
             "type": "path",
             "url": "./../../../src/Integration/Mezzio/Plates",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
+            "url": "./../../../src/Integration/Mezzio/Handlebars",
             "options": {
                 "symlink": true
             }
@@ -92,7 +106,8 @@
         "mezzio/mezzio-fastroute": "^3.0.3",
         "mezzio/mezzio-twigrenderer": "^2.6",
         "schranz-templating/mezzio-twig-integration": "@dev",
-        "schranz-templating/mezzio-plates-integration": "@dev"
+        "schranz-templating/mezzio-plates-integration": "@dev",
+        "schranz-templating/mezzio-handlebars-integration": "@dev"
     },
     "require-dev": {
         "laminas/laminas-development-mode": "^3.3.0",
