--- a/config.subsplit-publish.json
+++ b/config.subsplit-publish.json
@@ -186,6 +186,11 @@
             "target": "git@github.com:schranz-templating/mezzio-mustache-integration.git"
         },
         {
+            "name": "MezzioSmartyIntegration",
+            "directory": "src/Integration/Mezzio/Smarty",
+            "target": "git@github.com:schranz-templating/mezzio-smarty-integration.git"
+        },
+        {
             "name": "SymfonyBladeIntegration",
             "directory": "src/Integration/Symfony/Blade",
             "target": "git@github.com:schranz-templating/symfony-blade-integration.git"
