--- a/examples/usages/mezzio/composer.json
+++ b/examples/usages/mezzio/composer.json
@@ -80,6 +80,13 @@
         },
         {
             "type": "path",
+            "url": "./../../../src/Adapter/Smarty",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
             "url": "./../../../src/Integration/Mezzio/Twig",
             "options": {
                 "symlink": true
@@ -105,6 +112,13 @@
             "options": {
                 "symlink": true
             }
+        },
+        {
+            "type": "path",
+            "url": "./../../../src/Integration/Mezzio/Smarty",
+            "options": {
+                "symlink": true
+            }
         }
     ],
     "require": {
@@ -122,7 +136,8 @@
         "schranz-templating/mezzio-twig-integration": "@dev",
         "schranz-templating/mezzio-plates-integration": "@dev",
         "schranz-templating/mezzio-handlebars-integration": "@dev",
-        "schranz-templating/mezzio-mustache-integration": "@dev"
+        "schranz-templating/mezzio-mustache-integration": "@dev",
+        "schranz-templating/mezzio-smarty-integration": "@dev"
     },
     "require-dev": {
         "laminas/laminas-development-mode": "^3.3.0",
