--- a/examples/usages/spiral/composer.json
+++ b/examples/usages/spiral/composer.json
@@ -8,41 +8,30 @@
         "issues": "https://github.com/spiral/app/issues",
         "source": "https://github.com/spiral/app"
     },
-    "authors": [
-        {
-            "name": "Wolfy-J",
-            "email": "wolfy.jd@gmail.com"
-        }
-    ],
     "require": {
-        "php": ">=7.2",
+        "php": ">=8.1",
         "ext-mbstring": "*",
-        "spiral/framework": "^2.8",
-        "spiral/jobs": "^2.0",
-        "spiral/roadrunner": "^1.4",
-        "spiral/database": "^2.3",
-        "spiral/migrations": "^2.0",
-        "spiral/nyholm-bridge": "^1.0",
-        "cycle/orm": "^1.0",
-        "cycle/proxy-factory": "^1.0",
-        "cycle/annotated": "^2.0",
-        "cycle/migrations": "^1.0"
+        "doctrine/collections": "^1.8",
+        "spiral/cycle-bridge": "^2.1",
+        "spiral/framework": "^3.2",
+        "spiral/nyholm-bridge": "^1.3",
+        "spiral/roadrunner-bridge": "^2.1",
+        "spiral/sapi-bridge": "^1.0.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5|^9.0"
-    },
-    "scripts": {
-        "post-create-project-cmd": [
-            "php -r \"copy('.env.sample', '.env');\"",
-            "php app.php encrypt:key -m .env",
-            "php app.php configure -vv",
-            "spiral get-binary"
-        ]
+        "phpunit/phpunit": "^9.5",
+        "qossmic/deptrac-shim": "^1.0",
+        "spiral/testing": "^2.2",
+        "symfony/var-dumper": "^6.1",
+        "vimeo/psalm": "dev-master"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/src"
-        }
+        },
+        "files": [
+            "app/src/Application/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
@@ -50,16 +39,25 @@
         }
     },
     "extra": {
-        "publish-cmd": "php app.php publish",
-        "branch-alias": {
-            "dev-master": "1.4.x-dev"
-        }
+        "publish-cmd": "php app.php publish"
     },
     "config": {
         "sort-packages": true,
         "allow-plugins": {
             "spiral/composer-publish-plugin": true
         }
+    },
+    "scripts": {
+        "post-create-project-cmd": [
+            "php -r \"copy('.env.sample', '.env');\"",
+            "php app.php encrypt:key -m .env",
+            "php app.php configure -vv",
+            "rr get-binary"
+        ],
+        "psalm:config": "psalm",
+        "deptrack": [
+            "deptrac analyze --report-uncovered"
+        ]
     },
     "minimum-stability": "dev",
     "prefer-stable": true
