--- a/examples/usages/spiral/composer.json
+++ b/examples/usages/spiral/composer.json
@@ -8,6 +8,29 @@
         "issues": "https://github.com/spiral/app/issues",
         "source": "https://github.com/spiral/app"
     },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "./../../../src/TemplateRenderer",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
+            "url": "./../../../src/Adapter/Twig",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
+            "url": "./../../../src/Integration/Spiral/Twig",
+            "options": {
+                "symlink": true
+            }
+        }
+    ],
     "require": {
         "php": ">=8.1",
         "ext-mbstring": "*",
@@ -16,7 +39,8 @@
         "spiral/framework": "^3.2",
         "spiral/nyholm-bridge": "^1.3",
         "spiral/roadrunner-bridge": "^2.1",
-        "spiral/sapi-bridge": "^1.0.1"
+        "spiral/sapi-bridge": "^1.0.1",
+        "schranz-templating/spiral-twig-integration": "@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
