Register Spiral Twig package

--- a/config.subsplit-publish.json
+++ b/config.subsplit-publish.json
@@ -239,6 +239,11 @@
             "name": "SymfonyTwigIntegration",
             "directory": "src/Integration/Symfony/Twig",
             "target": "git@github.com:schranz-templating/symfony-twig-integration.git"
+        },
+        {
+            "name": "SpiralTwigIntegration",
+            "directory": "src/Integration/Spiral/Twig",
+            "target": "git@github.com:schranz-templating/spiral-twig-integration.git"
         }
     ]
 }
