--- a/examples/usages/spiral/composer.json
+++ b/examples/usages/spiral/composer.json
@@ -25,7 +25,21 @@
         },
         {
             "type": "path",
+            "url": "./../../../src/Adapter/Smarty",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
             "url": "./../../../src/Integration/Spiral/Twig",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
+            "url": "./../../../src/Integration/Spiral/Smarty",
             "options": {
                 "symlink": true
             }
@@ -40,7 +54,8 @@
         "spiral/nyholm-bridge": "^1.3",
         "spiral/roadrunner-bridge": "^2.1",
         "spiral/sapi-bridge": "^1.0.1",
-        "schranz-templating/spiral-twig-integration": "@dev"
+        "schranz-templating/spiral-twig-integration": "@dev",
+        "schranz-templating/spiral-smarty-integration": "@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
