Add Spiral Mustache Integration

--- a/config.subsplit-publish.json
+++ b/config.subsplit-publish.json
@@ -254,6 +254,11 @@
             "name": "SpiralHandlebarsIntegration",
             "directory": "src/Integration/Spiral/Handlebars",
             "target": "git@github.com:schranz-templating/spiral-handlebars-integration.git"
+        },
+        {
+            "name": "SpiralMustacheIntegration",
+            "directory": "src/Integration/Spiral/Mustache",
+            "target": "git@github.com:schranz-templating/spiral-mustache-integration.git"
         }
     ]
 }
