--- a/examples/usages/spiral/composer.json
+++ b/examples/usages/spiral/composer.json
@@ -53,6 +53,13 @@
         },
         {
             "type": "path",
+            "url": "./../../../src/Adapter/Latte",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
             "url": "./../../../src/Integration/Spiral/Twig",
             "options": {
                 "symlink": true
@@ -85,6 +92,13 @@
             "options": {
                 "symlink": true
             }
+        },
+        {
+            "type": "path",
+            "url": "./../../../src/Integration/Spiral/Latte",
+            "options": {
+                "symlink": true
+            }
         }
     ],
     "require": {
@@ -100,7 +114,8 @@
         "schranz-templating/spiral-smarty-integration": "@dev",
         "schranz-templating/spiral-handlebars-integration": "@dev",
         "schranz-templating/spiral-mustache-integration": "@dev",
-        "schranz-templating/spiral-plates-integration": "@dev"
+        "schranz-templating/spiral-plates-integration": "@dev",
+        "schranz-templating/spiral-latte-integration": "@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
