Add Spiral Blade Integration

--- a/examples/usages/spiral/composer.json
+++ b/examples/usages/spiral/composer.json
@@ -60,6 +60,13 @@
         },
         {
             "type": "path",
+            "url": "./../../../src/Adapter/Blade",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
             "url": "./../../../src/Integration/Spiral/Twig",
             "options": {
                 "symlink": true
@@ -99,6 +106,13 @@
             "options": {
                 "symlink": true
             }
+        },
+        {
+            "type": "path",
+            "url": "./../../../src/Integration/Spiral/Blade",
+            "options": {
+                "symlink": true
+            }
         }
     ],
     "require": {
@@ -111,11 +125,12 @@
         "spiral/roadrunner-bridge": "^2.1",
         "spiral/sapi-bridge": "^1.0.1",
         "schranz-templating/spiral-twig-integration": "@dev",
+        "schranz-templating/spiral-blade-integration": "@dev",
+        "schranz-templating/spiral-latte-integration": "@dev",
+        "schranz-templating/spiral-plates-integration": "@dev",
         "schranz-templating/spiral-smarty-integration": "@dev",
         "schranz-templating/spiral-handlebars-integration": "@dev",
-        "schranz-templating/spiral-mustache-integration": "@dev",
-        "schranz-templating/spiral-plates-integration": "@dev",
-        "schranz-templating/spiral-latte-integration": "@dev"
+        "schranz-templating/spiral-mustache-integration": "@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
