--- a/examples/usages/spiral/composer.json
+++ b/examples/usages/spiral/composer.json
@@ -67,6 +67,13 @@
         },
         {
             "type": "path",
+            "url": "./../../../src/Adapter/SpiralView",
+            "options": {
+                "symlink": true
+            }
+        },
+        {
+            "type": "path",
             "url": "./../../../src/Integration/Spiral/Twig",
             "options": {
                 "symlink": true
@@ -113,6 +120,13 @@
             "options": {
                 "symlink": true
             }
+        },
+        {
+            "type": "path",
+            "url": "./../../../src/Integration/Spiral/SpiralView",
+            "options": {
+                "symlink": true
+            }
         }
     ],
     "require": {
@@ -124,6 +138,7 @@
         "spiral/nyholm-bridge": "^1.3",
         "spiral/roadrunner-bridge": "^2.1",
         "spiral/sapi-bridge": "^1.0.1",
+        "schranz-templating/spiral-spiral-view-integration": "@dev",
         "schranz-templating/spiral-twig-integration": "@dev",
         "schranz-templating/spiral-blade-integration": "@dev",
         "schranz-templating/spiral-latte-integration": "@dev",
