--- a/src/Integration/Spiral/SpiralView/composer.json
+++ b/src/Integration/Spiral/SpiralView/composer.json
@@ -25,7 +25,7 @@
         }
     ],
     "require": {
-        "php": "^7.2 || ^8.0",
+        "php": "^8.1",
         "schranz-templating/spiral-view-adapter": "^0.1",
         "spiral/boot": "^3.0",
         "spiral/config": "^3.0",
