--- a/src/Integration/Spiral/Twig/composer.json
+++ b/src/Integration/Spiral/Twig/composer.json
@@ -28,6 +28,8 @@
         "php": "^8.1",
         "schranz-templating/twig-adapter": "^0.1",
         "spiral/twig-bridge": "^2.0",
+        "spiral/boot": "^3.0",
+        "spiral/config": "^3.0",
         "spiral/core": "^3.0"
     },
     "minimum-stability": "dev",
