--- a/src/Integration/Symfony/Handlebars/composer.json
+++ b/src/Integration/Symfony/Handlebars/composer.json
@@ -26,7 +26,7 @@
     ],
     "require": {
         "php": "^7.0 || ^8.0",
-        "salesforce/handlebars-php": "^2.3",
+        "salesforce/handlebars-php": "^2.3 || ^3.0",
         "schranz-templating/handlebars-adapter": "^0.1",
         "symfony/config": "^4.4 || ^5.4 || ^6.0",
         "symfony/dependency-injection": "^4.4 || ^5.4 || ^6.0",
